--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fontsource/poppins": "^5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.1",
+    "react-router-dom": "^7.2.0",
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
