--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@fontsource/allura": "^5.1.0",
+    "@fontsource/cormorant": "^5.1.1",
+    "@fontsource/playfair-display": "^5.1.1",
+    "@fontsource/playfair-display-sc": "^5.1.1",
     "@fontsource/poppins": "^5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
