--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/playfair-display": "^5.1.1",
     "@fontsource/playfair-display-sc": "^5.1.1",
     "@fontsource/poppins": "^5.1.0",
+    "gsap": "^3.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
