--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/playfair-display-sc": "^5.1.1",
     "@fontsource/poppins": "^5.1.0",
     "gsap": "^3.12.7",
+    "lenis": "^1.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
