--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
     "react-parallax": "^3.5.1",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.2.0",
     "vite-plugin-svgr": "^4.3.0"
   },
